# agimus_sot_msgs

./: CMakeLists.txt  package.xml
srv/: GetBasePoseAtParam.srv  PlugSot.srv  ReadQueue.srv  SetPose.srv  SetQueueRecData.srv  WaitForMinQueueSize.srv  WaitForQueueRecData.srv
